# mediaserver-clipper

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Rocket.toml
.github/workflows/: build.yml  docker.yml
backend/: Cargo.toml  build.rs
backend/src/: app.rs  clip_library.rs  clipper.rs  clips.rs  clips_library.rs  ffprobe.rs  main.rs  models.rs  routes.rs  search.rs
backend/static/css/: custom.css
backend/templates/: configure.html.hbs  root.html.hbs  search_result.html.hbs
common/: Cargo.toml
common/src/: lib.rs
public/css/: custom.css
src/: clipper.rs  clips.rs  config.rs  ffprobe.rs  files.rs  main.rs  models.rs  routes.rs  search.rs
templates/: configure.html.hbs  error.html.hbs  message.html.hbs  root.html.hbs  search_result.html.hbs
ui/: Cargo.toml  index.html
ui/src/: main.rs
ui/src/components/: clips.rs  create.rs  home.rs  input.rs  mod.rs  search.rs  status.rs
