[package]
name = "mediaserver-clipper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
common = { path = "../common" }
rocket = { version = "0.5.1", features = ["json"] }
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
log = "0.4.22"