[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
yew = { version = "0.21.0", features = ["csr"] }
wasm-logger = "0.2.0"
log = "0.4.22"
gloo-net = "0.5"
wasm-bindgen-futures = "0.4.42"
futures = "0.3.30"
web-sys = { version = "0.3.69", features = [
    "HtmlFormElement",
]}